Major refactor to allow for smarter 'watch' mode

--- a/SharePointDeployOTron.Logic/SharePointDeployOTron.Logic.csproj
+++ b/SharePointDeployOTron.Logic/SharePointDeployOTron.Logic.csproj
@@ -87,6 +87,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProcessorProvider.cs" />
+    <Compile Include="IProcessor.cs" />
     <Compile Include="Processor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
