--- a/SharePointDeployOTron.Watcher/App.config
+++ b/SharePointDeployOTron.Watcher/App.config
@@ -4,7 +4,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
   </startup>
   <appSettings>
-    <add key="Url" value="" />
+    <add key="SourceFolder" value="" />
+    <add key="TargetWeb" value="" />
+    <add key="TargetLibrary" value=""/>
     <add key="User" value="" />
     <add key="Password" value="" />
   </appSettings>
